<resources>
    <string name="app_name">Русские пароли</string>
    <string name="help_text">Введите пароль в русской раскладке</string>
    <string name="clipboard_title">Пароль</string>
    <string name="message_copied">Скопировано в буфер обмена</string>

    <string name="quality_hint">(качество)</string>
    <string name="check_uppercase">Заглавные</string>
    <string name="generate_random_password">Сгенерировать новый пароль</string>
    <string name="check_numeral">Цифры</string>
    <string name="check_special_characters">Спец символы</string>
    <string name="button_copy">Копировать</string>
    <string name="password_quality">Качество пароля</string>

    <string-array name="qualities">
        <item>@string/quality_hint</item>
        <item>Ужасный</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>Отличный</item>
    </string-array>

    <string-array name="russian">
        <item>й</item>
        <item>ц</item>
        <item>у</item>
        <item>к</item>
        <item>е</item>
        <item>н</item>
        <item>г</item>
        <item>ш</item>
        <item>щ</item>
        <item>з</item>
        <item>х</item>
        <item>ъ</item>
        <item>ф</item>
        <item>ы</item>
        <item>в</item>
        <item>а</item>
        <item>п</item>
        <item>р</item>
        <item>о</item>
        <item>л</item>
        <item>д</item>
        <item>ж</item>
        <item>э</item>
        <item>\</item>
        <item>я</item>
        <item>ч</item>
        <item>с</item>
        <item>м</item>
        <item>и</item>
        <item>т</item>
        <item>ь</item>
        <item>б</item>
        <item>ю</item>
        <item>.</item>
    </string-array>

    <string-array name="english">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>[</item>
        <item>]</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>;</item>
        <item>\'</item>
        <item>\</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
        <item>,</item>
        <item>.</item>
        <item>/</item>
    </string-array>

    <string-array name="charcters">
        <item>q</item>
        <item>w</item>
        <item>e</item>
        <item>r</item>
        <item>t</item>
        <item>y</item>
        <item>u</item>
        <item>i</item>
        <item>o</item>
        <item>p</item>
        <item>a</item>
        <item>s</item>
        <item>d</item>
        <item>f</item>
        <item>g</item>
        <item>h</item>
        <item>j</item>
        <item>k</item>
        <item>l</item>
        <item>z</item>
        <item>x</item>
        <item>c</item>
        <item>v</item>
        <item>b</item>
        <item>n</item>
        <item>m</item>
    </string-array>

    <string-array name="SpecialCharacters">
        <item>#</item>
        <item>$</item>
        <item>%</item>
        <item>&amp;</item>
        <item>*</item>
    </string-array>
</resources>
