<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".ui.activity.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/help_text"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_result"
        android:layout_marginBottom="@dimen/margin_result"
        android:background="@drawable/result_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/copy_button_padding"
            android:src="@drawable/ic_copy_black_24dp"
            android:contentDescription="@string/button_copy" />

        <TextView
            android:id="@+id/result_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ResultTextAppearance"
            android:layout_alignTop="@id/button_copy"
            android:layout_alignBottom="@id/button_copy"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_copy"

            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"

            tools:text="Test" />

        <ImageView
            android:id="@+id/quality"
            android:layout_width="@dimen/indicator_width"
            android:layout_height="@dimen/indicator_height"
            android:layout_below="@id/result_text"
            android:layout_alignParentEnd="true"
            android:src="@drawable/quality_indicator"
            android:contentDescription="@string/password_quality" />

        <TextView
            android:id="@+id/quality_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_alignTop="@+id/quality"
            android:layout_alignBottom="@+id/quality"
            android:layout_toStartOf="@id/quality"
            android:gravity="center_vertical"

            android:text="@string/quality_hint" />
    </RelativeLayout>

    <EditText
        android:id="@+id/source_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="Test"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/check_uppercase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_uppercase" />

    <CheckBox
        android:id="@+id/check_numerals"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_numeral" />

    <CheckBox
        android:id="@+id/check_special_characters"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_special_characters" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_result"
        android:layout_marginBottom="@dimen/margin_result"
        android:background="@drawable/result_background"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/button_copy_random_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:padding="@dimen/copy_button_padding"
            android:src="@drawable/ic_copy_black_24dp" />

        <TextView
            android:id="@+id/result_text_random_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/ResultTextAppearance"
            android:layout_alignTop="@id/button_copy_random_password"
            android:layout_alignBottom="@id/button_copy_random_password"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/button_copy_random_password"

            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:singleLine="true"

            tools:text="Test" />
    </RelativeLayout>

    <Button
        android:id="@+id/button_generate_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generate_random_password" />

</LinearLayout>